Fixed missing -latomic compilation on RPI OS desktop
Without this, you will be unable to compile for PLATFORM_DESKTOP on RPI OS Desktop on RPi 0-3

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -310,7 +310,7 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),LINUX)
         # Libraries for Debian GNU/Linux desktop compiling
         # NOTE: Required packages: libegl1-mesa-dev
-        LDLIBS = -lraylib -lGL -lm -lpthread -ldl -lrt
+        LDLIBS = -lraylib -lGL -lm -lpthread -ldl -lrt -latomic
 
         # On X11 requires also below libraries
         LDLIBS += -lX11
