Reviewed GLFW issue with `ppoll()` function

--- a/src/Makefile
+++ b/src/Makefile
@@ -348,7 +348,7 @@ endif
 #  -Wstrict-prototypes      warn if a function is declared or defined without specifying the argument types
 #  -Werror=implicit-function-declaration   catch function calls without prior declaration
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
-    #CFLAGS += -Werror=implicit-function-declaration
+    CFLAGS += -Werror=implicit-function-declaration
 endif
 ifeq ($(PLATFORM),PLATFORM_WEB)
     # -Os                        # size optimization
