--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -84,13 +84,15 @@ jobs:
         cd src
         set PATH=%PATH%;${{ matrix.COMPILER_PATH }}
         ${{ matrix.ARCH }}-w64-mingw32-gcc.exe --version
-        ${{ matrix.COMPILER_PATH }}/windres.exe --version
+        ${{ matrix.COMPILER_PATH }}\windres.exe --version
+        dir C:\msys64\mingw64\bin
         make PLATFORM=PLATFORM_DESKTOP CC=${{ matrix.ARCH }}-w64-mingw32-gcc.exe RAYLIB_LIBTYPE=STATIC RAYLIB_RELEASE_PATH="../build/${{ env.RELEASE_NAME }}/lib"
-        ${{ matrix.COMPILER_PATH }}/windres.exe -i raylib.dll.rc -o raylib.dll.rc.data -O coff --target=${{ matrix.WINDRES_ARCH }}
+        ${{ matrix.COMPILER_PATH }}\windres.exe -i raylib.dll.rc -o raylib.dll.rc.data -O coff --target=${{ matrix.WINDRES_ARCH }}
         make PLATFORM=PLATFORM_DESKTOP CC=${{ matrix.ARCH }}-w64-mingw32-gcc.exe RAYLIB_LIBTYPE=SHARED RAYLIB_RELEASE_PATH="../build/${{ env.RELEASE_NAME }}/lib" -B
         cd ..
       shell: cmd
-      if: matrix.compiler == 'mingw-w64'
+      # NOTE: The MinGW-w64 compiler provided by the host only supports 64bit compilation
+      if: matrix.compiler == 'mingw-w64' && bits == '64'
 
     - name: Build Library (MSVC16)
       run: |
